# lxc_init

./: .gitignore  LICENSE  README.md  initialize.py  main.py  pyproject.toml
init/: first_steps.sh  zshrc.template
init/watchtower/: docker-compose.yaml
lxc_init/: initialize.py
src/: main.py
src/init/: first_steps.sh
src/init/watchtower/: docker-compose.yaml
src/lxc_init/: initialize.py
templates/init/: first_steps.sh  p10k.zsh.template  zsh_install.sh  zshrc.template
