[project]
name = "lxc-init"
version = "0.1.0"
description = ""
authors = [
    {name = "simeonreusch",email = "mail@simeonreusch.com"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.scripts]
initialize = "main:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
paramiko = "^3.5.1"
scp = "^0.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
